static/stylesheets/base.css
/* Elements */

* {
    box-sizing: border-box;
}

body {
    margin: 0;
    overflow-x: hidden;
    overflow-y: auto;
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 12pt;
    color: #66686a;
    background-color: white;
}

h1 {
    font-family: 'Ubuntu', sans-serif;
    font-size: 16pt;
    font-weight: bold;
    color: #0093B1;
    padding: 0;
    margin: 25px 4% 0;
}

h2 {
    font-family: 'Ubuntu', sans-serif;
    font-size: 14pt;
    text-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
    letter-spacing: 0.4px;
    font-weight: bolder;
    color: #66686a;
    padding: 0;
    margin-top: 0;
}

h3 {
    font-size: 11pt;
    text-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
    letter-spacing: 0.4px;
    color: white;
    padding: 0;
}

h4 {
    font-family: 'Ubuntu', sans-serif;
    font-size: 14pt;
    text-shadow: 0 0 50px rgba(0, 0, 0, 0.3);
    letter-spacing: 0.4px;
    color: #66686a;
    padding: 0;
    margin-top: 0;
}

p {
    font-family: 'Source Sans Pro', sans-serif;
    font-size: 12pt;
    font-weight: 200;
    width: 92%;
}
a {
    color: #337ab7;
    text-decoration: none
}
/* --- Utility Classes --- */

.turquoise {
    background: rgba(0, 169, 194, 0.7);
}

.blue {
    background: rgba(0, 99, 176, 0.7);
}

.lightTurquoise {
    background: rgba(97, 192, 212, 0.7);
}

.darkBlue {
    background: rgba(15, 59, 127, 0.7);
}

.lightBlue {
    background: rgba(64, 161, 218, 0.7);
}

.yellow {
    background: #FFE641;
}

.grey-text {
    color: rgba(37, 37, 37, 0.63);
}

#container {
    margin-left: 0;
    width: 100%;
    position: absolute;
}

.section-container {
    width: 100%;
    max-width: 1400px;
    margin: 0 auto;
}

.center-col {
    margin: 10px auto;
}

.col-1 {
    width: 96%;
}

.col-2 {
    width: 49.5%;
}

.col-3 {
    width: 33%;
}

.col-2-bigL {
    width: 59.5%;
    padding-left: 25px;
}

.col-2-smallR {
    width: 39.5%;
    padding-right: 25px;
}

.flex-row {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 0 auto;
    align-items: center;
}

.visibilityVisible {
    visibility: visible !important;
    transition: visibility 0.4s;
}

.visibilityHidden {
    visibility: hidden !important;
    transition: visibility 0.4s;
}

.noUnderline {
    text-decoration: none !important;
}

/* --- Background --- */

#bgCanvas {
    z-index: -9999;
    position: absolute;
    top: 120px;
    float: left;
}

/* --- Header and Header Content --- */

.header {
    top: 0;
    height: 60px;
    box-shadow: 0 -4px 16px 0 #000000;
    text-align: center;
    padding: 0;
    width: 100%;
    position: fixed;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    z-index: 9999;
    opacity: 1;
    background-color: white;
}

.header button {
    font-size: 16px;
    font-weight: bolder;

    padding: 5px 10px;
    width: 90px;
    margin: 2px 0 2px 10px;

    box-shadow: none;

    color: #33c5f4;

    background-color: white;
    border-radius: 5px;
    border-color: #33c5f4;
    border-width: 2px;
    border-style: solid;

    text-decoration: none;
    transition: all 0.2s;
    line-height: inherit;
}

.header button:hover {
    background-color: #33c5f4;
    color: white;
    cursor: pointer;
    transition: all 0.2s;
}

.header p {
    margin: 0;
    padding: 0;
}

.header-condensed {
    height: 80px !important;
    transition: height 0.4s;
}

#eventInfo {
    padding-left: 50px;
    text-align: left;
    width: 300px;
    opacity: 0;
}

.header-condensed #eventInfo {
    padding-left: 25px;
    transition: padding-left 0.4s;
}

#eventInfo * {
    margin: 0;
    padding: 0;
    color: #33c5f4;
}

#logo {
    height: 70%;
    width: 300px;
    text-align: center;
    display: flex;
    align-items: center;
    justify-content: center;
}

#logo-text {
    max-width: 100%;
    max-height: 100%;
    margin: 0 auto;
    vertical-align: middle;
}

.logo-scale {
    transform: scale(3.33333);
}

#logo a {
    background-color: rgba(0,0,0,0);
    box-shadow: 0 0 0 0 #000000;

    padding: 0 0;
    margin: 0 0 0 0;
}

#headerButtons {
    padding-right: 50px;
    text-align: center;
    width: 300px;
    display: flex;
    align-items: center;
    justify-content: flex-end;
    opacity: 0;
}

.header-condensed #headerButtons, .header-condensed #headerDropdown {
    padding-right: 25px;
    transition: padding-right 0.4s;
}

#headerDropdown {
    display: none;
    position: relative;
    width: 300px;
    padding-right: 50px;
    text-align: right;
}

#dropdownContent {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    position: fixed;
    text-align: center;

    height: 120px;
    width: 160px;
    top: 120px;
    right: 0;

    border-left: 1px solid rgba(20, 20, 20, 0.1);
    border-right: 1px solid rgba(20, 20, 20, 0.1);
    border-bottom: 1px solid rgba(20, 20, 20, 0.1);
}

#dropdownContent a {
    margin: 2px 0;
}

.header-condensed #dropdownContent {
    top: 60px !important;
    transition: top 0.4s;
}

#dropdownTrigger {
    color: rgba(255, 255, 255, 0.8);
}

#dropdownTrigger:hover{
    cursor: pointer;
    color: #FFE641;
}

/* --- Non-Tiled Section --- */

.more-info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    background-color: white;
    color: rgba(37, 37, 37, 0.63);
    padding: 40px 5% 70px;
}

.faq-header {
    text-transform: uppercase;
    text-align: center;
    padding: 20px 0;
    font-weight: 300;
    font-size: 26px;
}

.faq-row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-bottom: 15px;
}

.faq-item {
    width: 30%;
    margin: 10px 3% 10px 0;
    transition: all 0.2s;
}

.faq-item .question {
    font-family: 'Ubuntu', sans-serif;
    color: #33c5f4;
    font-size: 14pt;
}

.faq-item .question:hover {
    cursor: pointer;
    color: rgba(15, 59, 127, 1);
}
/* ... */

